<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.suprememath.ui.matrix.MatrixFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_matrix" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.suprememath.ui.equations.SquareFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_square" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.suprememath.ui.mathApi.MathFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_math_api" />
    <fragment
        android:id="@+id/boardFragment"
        android:name="com.example.suprememath.board.BoardFragment"
        android:label="fragment_board"
        tools:layout="@layout/fragment_board" />
</navigation>