<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bestone"
    tools:context=".ui.mathApi.MathFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/editTextLayout"
        android:textColorHint="@color/white"
        android:hint="@string/expression"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_baseline_border_color_24"
        android:layout_margin="32dp"
        app:counterEnabled="true"
        app:layout_constraintTop_toTopOf="parent"
        app:counterMaxLength="20"
        app:helperTextTextColor="#F30B0B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="wrap_content"
        android:text="@string/evaluate"
        android:id="@+id/BtnSend"
        app:cornerRadius="50dp"
        android:background="@drawable/gradient"
        android:textColor="@color/white"
        android:fontFamily="@font/modern_antiqua"
        android:layout_marginTop="30dp"
        android:layout_marginStart="120dp"
        app:layout_constraintStart_toStartOf="@+id/editTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/editTextLayout"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="#00B0FF"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText,SpeakableTextPresentCheck"
        android:contentDescription="empty" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cameraBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:fabSize="mini"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/floatingBtn"
        app:layout_constraintEnd_toEndOf="@+id/floatingBtn"
        app:layout_constraintStart_toStartOf="@+id/floatingBtn"
        tools:ignore="HardcodedText,SpeakableTextPresentCheck"
        android:contentDescription="empty" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_edit_24"
        app:fabSize="mini"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/cameraBtn"
        app:layout_constraintEnd_toEndOf="@+id/cameraBtn"
        app:layout_constraintStart_toStartOf="@+id/cameraBtn"
        tools:ignore="HardcodedText,SpeakableTextPresentCheck"
        android:contentDescription="empty" />
<androidx.cardview.widget.CardView
    android:layout_width="250dp"
    android:layout_marginTop="30dp"
    app:cardCornerRadius="16dp"
    app:layout_constraintStart_toStartOf="@+id/BtnSend"
    app:layout_constraintEnd_toEndOf="@+id/BtnSend"
    app:layout_constraintTop_toBottomOf="@+id/BtnSend"
    android:layout_height="60dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/modern_antiqua"
            android:padding="8dp"
            android:text="@string/result"
            android:textColor="#039BE5"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@+id/BtnSend" />
    </LinearLayout>

</androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>